bauer/tests/ui/array-repeat-type.fail.rs
use bauer::Builder;

#[derive(Builder)]
pub struct Foo {
    #[builder(repeat = u8)]
    field_a: [u32; 3],
}

fn main() {}
